packages/svelte/test/compiler-errors/samples/component-slot-nested-error-2/_config.js
export default {
	error:
		"Element with a slot='...' attribute must be a child of a component or a descendant of a custom element"
};
